--- a/Loan Calculator/Base.lproj/Main.storyboard
+++ b/Loan Calculator/Base.lproj/Main.storyboard
@@ -16,20 +16,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7ck-dJ-HQp">
-                                <rect key="frame" x="51.5" y="270.5" width="311" height="355.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" axis="vertical" alignment="top" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="7ck-dJ-HQp">
+                                <rect key="frame" x="51.5" y="261.5" width="311" height="373.5"/>
                                 <subviews>
                                     <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="Выберите расчетный параметр и задайте остальные" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DH9-7d-rI3">
-                                        <rect key="frame" x="0.0" y="0.0" width="311" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="295" height="48"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="lessThanOrEqual" priority="900" constant="350" id="Sn3-do-Qz0"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" priority="900" constant="300" id="Sn3-do-Qz0"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="0nl-ti-R0T">
-                                        <rect key="frame" x="0.0" y="68" width="303" height="166"/>
+                                        <rect key="frame" x="0.0" y="74" width="303" height="166"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="lWk-Jx-tbf">
                                                 <rect key="frame" x="0.0" y="0.0" width="49" height="166"/>
@@ -73,7 +73,7 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                         <connections>
-                                                            <action selector="sent1:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="jdO-oG-cVy"/>
+                                                            <action selector="sent1:" destination="BYZ-38-t0r" eventType="editingChanged" id="23L-EN-y7R"/>
                                                         </connections>
                                                     </textField>
                                                     <textField autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="TopLeft" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uSM-Yu-5Nk">
@@ -85,7 +85,7 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                         <connections>
-                                                            <action selector="sent2:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="QKY-Vn-KPQ"/>
+                                                            <action selector="sent2:" destination="BYZ-38-t0r" eventType="editingChanged" id="v0w-lv-FFV"/>
                                                         </connections>
                                                     </textField>
                                                     <textField autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="TopLeft" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mdt-ws-7qk">
@@ -97,7 +97,7 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                         <connections>
-                                                            <action selector="sent3:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="EdF-NM-ZRh"/>
+                                                            <action selector="sent3:" destination="BYZ-38-t0r" eventType="editingChanged" id="SW4-8y-Ynx"/>
                                                         </connections>
                                                     </textField>
                                                     <textField autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="TopLeft" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TXJ-NL-DPK">
@@ -109,7 +109,7 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                         <connections>
-                                                            <action selector="sent5:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="ove-Hr-JvQ"/>
+                                                            <action selector="sent5:" destination="BYZ-38-t0r" eventType="editingChanged" id="KhP-d4-VNA"/>
                                                         </connections>
                                                     </textField>
                                                 </subviews>
@@ -147,7 +147,7 @@
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits"/>
                                                                 <connections>
-                                                                    <action selector="sent4:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="TkC-QW-tjj"/>
+                                                                    <action selector="sent4:" destination="BYZ-38-t0r" eventType="editingChanged" id="CwG-Kb-Utv"/>
                                                                 </connections>
                                                             </textField>
                                                             <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="мес" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="YFA-LK-ReP">
@@ -171,13 +171,16 @@
                                         </subviews>
                                     </stackView>
                                     <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="Метод" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1p4-es-n6z">
-                                        <rect key="frame" x="0.0" y="254" width="51" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="266" width="51" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" priority="900" constant="300" id="Lh2-fl-unt"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="ZN5-Q5-YCQ">
-                                        <rect key="frame" x="0.0" y="294.5" width="311" height="61"/>
+                                        <rect key="frame" x="0.0" y="312.5" width="311" height="61"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ufy-Gb-LYx">
                                                 <rect key="frame" x="0.0" y="0.0" width="143" height="61"/>
